# CodeFrame

./: .gitignore  CONTEXT.md  README.md  pyproject.toml  single-family-1800.json
.claude/: settings.json
docs/: architecture.md  disclaimer.md  drafting-conventions.md  roadmap.md  vision.md
docs/adr/: 0001-ezdxf-over-freecad.md  0002-explicit-geometry-no-auto-layout.md  0003-freecad-massing-model.md
docs/research/: 2026-07-09-pilot-appeal-survey.md  2026-07-16-rust-native-geometry.md
examples/: demo_residential_project.json  manzanita_studio_adu.json  poppy_one_bedroom_adu.json  sequoia_two_bedroom_adu.json
examples/sample-output/poppy-1br/: code_compliance.dxf  details.dxf  elevation_front.dxf  elevation_left.dxf  elevation_rear.dxf  elevation_right.dxf  floor_plan.dxf  foundation_plan.dxf  general_notes.dxf  model_3d.step  roof_framing_plan.dxf  roof_plan.dxf  schedules.dxf  section_a.dxf  site_plan.dxf  structural_notes.dxf
scripts/: README.md
scripts/blender/: README.md
scripts/freecad/: README.md
skills/codeframe-adu/: REFERENCE.md  SKILL.md
skills/codeframe-layout-review/: SKILL.md  check_layout.py
src/codeframe/: __init__.py  cli.py  dxf.py  geometry.py  massing.py  projects.py  schema.py  sheets.py
tests/: test_cli.py  test_dxf.py  test_massing.py  test_schema.py  test_sheets.py
tests/golden/: code_compliance.dxf  details.dxf  elevation_front.dxf  elevation_left.dxf  elevation_rear.dxf  elevation_right.dxf  floor_plan.dxf  foundation_plan.dxf  general_notes.dxf  model_3d.step  roof_framing_plan.dxf  roof_plan.dxf  schedules.dxf  section_a.dxf  site_plan.dxf  structural_notes.dxf
