[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codeframe"
version = "0.1.0"
description = "Experimental AI-assisted CAD and 3D modeling workflow framework for residential permit preparation."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "CodeFrame contributors" }
]
keywords = ["cad", "freecad", "blender", "architecture", "permit", "residential"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "License :: OSI Approved :: Apache Software License",
]
dependencies = []

[project.scripts]
codeframe = "codeframe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
